...
    <string name="message_list_title"><xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g> </string>

    <string name="compose_title_compose">Compose</string>
    <string name="compose_title_reply">Reply</string>
    <string name="compose_title_reply_all">Reply all</string>
...

    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <!-- Used to confirm acceptance of dialog boxes, warnings, errors, etc. -->
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_again_action">Send Again</string>
    <string name="empty_subject">Subject is empty, click again to send anyway</string>
...
    <string name="single_message_options_action">Send…</string>
    <string name="refile_action">Refile…</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
...
    <string name="read_receipt_disabled">Will not request read receipt</string>
    <string name="add_attachment_action">Add attachment</string>
    <string name="record_audio">Record_audio</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
...
        <item>Team Meeting</item>
    </string-array>
    <string name="apply_template">Apply Template</string>
    <string name="template1">
        Dear Dr.{last name},\n\n
        My name is {name} and my student ID is {student id}
...
        {name}
    </string>
    <string name="template2">
        Hi {First Name},\n\n
        It was nice to meet you at {Occasion where you met}. I loved learning more about {Something discussed}.
...
        Looking forward to keeping in touch!
    </string>
    <string name="template3">
        {month, day year}\n\n
        {address}\n\n
...
        {name}
    </string>
    <string name="template4">
        Dear Mr/Ms.{last name}\n\n
        My name is {first and last name} and this letter is in reference to vacancy at your residency at {address}.
...
        {name}
    </string>
    <string name="template5">
        To whom it may concern,\n\n\n
        Thank you for you time\n
        {Sign name here}
    </string>
    <string name="template6">
        Dear {name}\n\n
        Please mark your calendars for the {Insert Event Name}\n\n
...
        {name}."
    </string>
    <string name="template7">
        Hello everyone!\n\n
        Our meeting will take place at {fill in time here} in the {fill in location}.
...

    <string name="account_setup_names_title">You\'re almost done!</string>
    <string name="account_setup_names_account_name_label">Give this account a name (optional):</string>
    <string name="account_setup_names_user_name_label">Type your name (displays on outgoing messages):</string>

    <string name="account_setup_account_type_title">Account type</string>
...
    <string name="account_setup_failed_dlg_certificate_message_fmt">The server presented an invalid SSL certificate. Sometimes, this is because of a server misconfiguration. Sometimes it is because someone is trying to attack you or your mail server. If you\'re not sure what\'s up, click Reject and contact the folks who manage your mail server.\n\n(<xliff:g id="error">%s</xliff:g>)</string>
    <string name="account_setup_failed_dlg_server_message_fmt">Cannot connect to server.\n(<xliff:g id="error">%s</xliff:g>)</string>
    <string name="account_setup_failed_dlg_edit_details_action">Edit details</string>
    <string name="account_setup_failed_dlg_continue_action">Continue</string>

    <string name="account_settings_push_advanced_title">Advanced</string>
...
    <string name="unread_widget_folder_summary">The folder for which the unread count should be displayed</string>
    <string name="unread_widget_action_done">Done</string>
    <string name="unread_widget_title"><xliff:g id="account_name">%1$s</xliff:g> - <xliff:g id="folder_name">%2$s</xliff:g></string>
    <string name="unread_widget_account_not_selected">No account selected</string>
    <string name="unread_widget_folder_not_selected">No folder selected</string>
...
