...
        android:alphabeticShortcut="n"
        android:title="@string/add_attachment_action"
        android:icon="?attr/iconActionAddAttachment"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/send"
        android:alphabeticShortcut="s"
        android:title="@string/send_action"
        android:icon="?attr/iconActionSend"
        android:showAsAction="always"
    />
    <item
...
