...
                    android:layout_marginLeft="1dip"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary"
                    />

            <TextView
                    android:id="@+id/subject"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dip"
                    android:layout_marginLeft="1dip"
                    android:ellipsize="marquee"
...
