...
                    android:id="@+id/template_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/template_title" />

                <Spinner
                    android:id="@+id/templates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/apply_template"
                    android:text="@string/apply_template"
                    android:textSize="10sp"
...
                android:orientation="horizontal" >

            </LinearLayout>

            <view
                class="com.fsck.k9.ui.EolConvertingEditText"
                android:id="@+id/message_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/message_compose_content_hint"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
...
